test/errors/equ2.input.asm

* = $801

!let irqline0 = 13

    lda #xyzzy
